--- a/site/src/app/contact/contact.component.html
+++ b/site/src/app/contact/contact.component.html
@@ -1,58 +1,52 @@
-<mat-grid-list cols="2" rowHeight="1:1">
-    <mat-grid-tile>
-        <section id="contact" [ngStyle.lt-md]="{'margin-top': '30px', 'margin-bottom': '30px'}">
-            <div class="container">
-                <div class="contact-section contact-heading mat-typography" fxLayout="column"
-                     fxLayoutAlign="center center">
-                    <div>
-                        <h2 [ngStyle.lt-md]="{'margin-bottom': '15px'}">Обратная связь</h2>
-                    </div>
+<section id="contact" [ngStyle.lt-md]="{'margin-top': '30px', 'margin-bottom': '30px'}">
+    <div class="container">
+        <div class="contact-section contact-heading mat-typography" fxLayout="column"
+             fxLayoutAlign="center center">
+            <div>
+                <h2 [ngStyle.lt-md]="{'margin-bottom': '15px'}">Обратная связь</h2>
+            </div>
+        </div>
+
+        <form class="formwidth" (ngSubmit)="onSubmit()">
+            <div class="contact-form">
+
+                <mat-form-field appearance="outline" color="accent">
+                    <mat-label>
+                        Ваше имя <strong style="color: red">*</strong>
+                    </mat-label>
+                    <input matInput [formControl]="nameFormControl"
+                           [errorStateMatcher]="matcher">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" color="accent">
+                    <mat-label>Ваш E-mail
+                        <strong style="color: red">*</strong>
+                    </mat-label>
+                    <input matInput [formControl]="emailFormControl"
+                           [errorStateMatcher]="matcher">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" color="accent">
+                    <mat-label>Сообщение <strong style="color: red">*</strong></mat-label>
+                    <textarea matInput
+                              cdkTextareaAutosize
+                              [formControl]="commentFormControl"
+                              [errorStateMatcher]="matcher"
+                              cdkAutosizeMinRows="10"
+                              cdkAutosizeMaxRows="15"></textarea>
+                </mat-form-field>
+
+                <br>
+
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <button mat-raised-button style="width: 160px;height: 40px;font-size: 24px" color="accent"
+                            type="submit">Отправить
+                    </button>
                 </div>
 
-                <form class="formwidth" (ngSubmit)="onSubmit()">
-                    <div class="contact-form">
-
-                        <mat-form-field appearance="outline" color="accent">
-                            <mat-label>
-                                Ваше имя <strong style="color: red">*</strong>
-                            </mat-label>
-                            <input matInput [formControl]="nameFormControl"
-                                   [errorStateMatcher]="matcher">
-                        </mat-form-field>
-
-                        <mat-form-field appearance="outline" color="accent">
-                            <mat-label>Ваш E-mail
-                                <strong style="color: red">*</strong>
-                            </mat-label>
-                            <input matInput [formControl]="emailFormControl"
-                                   [errorStateMatcher]="matcher">
-                        </mat-form-field>
-
-                        <mat-form-field appearance="outline" color="accent">
-                            <mat-label>Сообщение <strong style="color: red">*</strong></mat-label>
-                            <textarea matInput
-                                      cdkTextareaAutosize
-                                      [formControl]="commentFormControl"
-                                      [errorStateMatcher]="matcher"
-                                      cdkAutosizeMinRows="10"
-                                      cdkAutosizeMaxRows="15"></textarea>
-                        </mat-form-field>
-
-                        <br>
-
-                        <div fxLayout="row" fxLayoutAlign="center center">
-                            <button mat-raised-button color="accent" type="submit">Отправить</button>
-                        </div>
-
-                    </div>
-
-                </form>
-
             </div>
-        </section>
-    </mat-grid-tile>
-    <mat-grid-tile>
-        <iframe src="https://yandex.com/map-widget/v1/-/CGG6ETiA" width="600" height="400" frameborder="0"
-                allowfullscreen="true"></iframe>
-    </mat-grid-tile>
-</mat-grid-list>
+
+        </form>
+
+    </div>
+</section>
