--- a/site/src/app/contact/contact.component.scss
+++ b/site/src/app/contact/contact.component.scss
@@ -15,10 +15,10 @@
 }
 
 .contact-form {
-  //display: flex;
+  display: flex;
   flex-direction: column;
-  //padding-left: 300px;
-  //padding-right: 300px;
+  padding-left: 300px;
+  padding-right: 300px;
 }
 
 .contact-form > * {
