--- a/site/src/app/layout/header/header.component.css
+++ b/site/src/app/layout/header/header.component.css
@@ -13,18 +13,21 @@
 }
 
 .heading-button-left {
-    min-width: 144px;
+    min-width: 160px;
     max-width: 100%;
+    height: 40px;
+    font-size: 24px;
 }
 
 .heading-button-right {
     margin-left: 10px;
 }
 
-#owl-demo .item{
+#owl-demo .item {
     margin: 3px;
 }
-#owl-demo .item img{
+
+#owl-demo .item img {
     display: block;
     width: 100%;
     height: auto;
